--- a/server/package.json
+++ b/server/package.json
@@ -13,5 +13,10 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "mongoose": "^6.0.8"
+  },
+  "devDependencies": {
+    "eslint": "^7.32.0",
+    "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-plugin-import": "^2.24.2"
   }
 }
