--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,8 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.22.0",
+    "axios-extensions": "^3.1.3",
     "core-js": "^3.6.5",
     "eslint-import-resolver-alias": "^1.1.2",
     "register-service-worker": "^1.7.1",
