added docker files for client

--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -3,8 +3,7 @@ WORKDIR /usr/src/app
 COPY package*.json ./
 RUN yarn install
 RUN yarn lint --no-fix
-RUN yarn build
-RUN yarn test:unit --coverage
+RUN yarn test:unit
 COPY . .
 EXPOSE 8080
 CMD [ "npm", "start" ]
