--- a/client/package.json
+++ b/client/package.json
@@ -12,9 +12,11 @@
   "dependencies": {
     "axios": "^0.22.0",
     "axios-extensions": "^3.1.3",
+    "babel-loader": "^8.2.2",
     "core-js": "^3.6.5",
     "eslint-import-resolver-alias": "^1.1.2",
     "register-service-worker": "^1.7.1",
+    "sinon": "^11.1.2",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
     "vuetify": "^2.4.0",
