update travis conf

--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -1,9 +1,24 @@
 FROM node:lts-alpine
-WORKDIR /usr/src/app
+
+# install simple http server for serving static content
+RUN yarn add -g http-server
+
+# make the 'app' folder the current working directory
+WORKDIR /app
+
+# copy both 'package.json' and 'package-lock.json' (if available)
 COPY package*.json ./
+
+# install project dependencies
 RUN yarn install
 RUN yarn lint --no-fix
 RUN yarn test:unit
+
+# copy project files and folders to the current working directory (i.e. 'app' folder)
 COPY . .
+
+# build app for production with minification
+RUN yarn build
+
 EXPOSE 8080
-CMD [ "npm", "start" ]
+CMD [ "http-server", "dist" ]
