--- a/client/.travis.yml
+++ b/client/.travis.yml
@@ -3,5 +3,5 @@ language: node_js
 services: 
     - docker
 before_install: 
-    - docker build -t server:     
-    - docker run -e CI=true server 
+    - docker build -t client:     
+    - docker run -e CI=true client 
