--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,6 @@ services:
     - docker
 before_install: 
     - docker build -t server ./server     
-    - docker run -e CI=true server ./server
+    - docker run -e CI=true server
     - docker build -t client ./client     
     - docker run -e CI=true client  
