--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -1,24 +1,9 @@
 FROM node:lts-alpine
-
-# install simple http server for serving static content
-RUN yarn add -g http-server
-
-# make the 'app' folder the current working directory
 WORKDIR /app
-
-# copy both 'package.json' and 'package-lock.json' (if available)
-COPY package*.json ./
-
-# install project dependencies
+COPY package*.json yarn*.lock ./
 RUN yarn install
-RUN yarn lint --no-fix
-RUN yarn test:unit
-
-# copy project files and folders to the current working directory (i.e. 'app' folder)
+RUN yarn lint
+RUN yarn test
 COPY . .
-
-# build app for production with minification
-RUN yarn build
-
 EXPOSE 8080
-CMD [ "http-server", "dist" ]
+CMD [ "yarn", "serve" ]
